# BBB-PRU-Melexis-MLX92213

./: .gitignore  README.md
Hall_Sensor/: CMakeLists.txt  rpmsg_pru_user_space_echo.c
Hall_Sensor/ARM/: deploy_ARM.sh  mqtt.c  rpmsg_mqtt.c  rpmsg_mqtt_new.c  rpmsg_read.c  test.c
Hall_Sensor/PRU/PRU1_Hall/: main.c
Hall_Sensor/PRU_codes/: deploy_echo.sh
Hall_Sensor/PRU_codes/PRU1_Hall/: main.c
Test_IEP/: rpmsg_pru_user_space_echo.c
Test_IEP/PRU_codes/: deploy_echo.sh
Test_IEP/PRU_codes/PRU_IEP_reading/: main.c
