# cmake_minimum_required(VERSION <specify CMake version here>)
project(Test_IEP)

set(CMAKE_CXX_STANDARD 11)

add_executable(Test_IEP
        PRU_codes/include/am335x/pru_cfg.h
        PRU_codes/include/am335x/pru_ctrl.h
        PRU_codes/include/am335x/pru_ecap.h
        PRU_codes/include/am335x/pru_iep.h
        PRU_codes/include/am335x/pru_intc.h
        PRU_codes/include/am335x/pru_uart.h
        PRU_codes/include/am335x/sys_mailbox.h
        PRU_codes/include/am335x/sys_mcspi.h
        PRU_codes/include/am335x/sys_pwmss.h
        PRU_codes/include/am437x/pru_cfg.h
        PRU_codes/include/am437x/pru_ctrl.h
        PRU_codes/include/am437x/pru_ecap.h
        PRU_codes/include/am437x/pru_iep.h
        PRU_codes/include/am437x/pru_intc.h
        PRU_codes/include/am437x/pru_uart.h
        PRU_codes/include/am437x/sys_adc0TscSs.h
        PRU_codes/include/am437x/sys_adc1MagSs.h
        PRU_codes/include/am437x/sys_mailbox.h
        PRU_codes/include/am437x/sys_mcspi.h
        PRU_codes/include/am437x/sys_pwmss.h
        PRU_codes/include/am571x/pru_cfg.h
        PRU_codes/include/am571x/pru_ctrl.h
        PRU_codes/include/am571x/pru_ecap.h
        PRU_codes/include/am571x/pru_iep.h
        PRU_codes/include/am571x/pru_intc.h
        PRU_codes/include/am571x/pru_uart.h
        PRU_codes/include/am571x/sys_mailbox.h
        PRU_codes/include/am571x/sys_pwmss.h
        PRU_codes/include/am572x_1_1/pru_cfg.h
        PRU_codes/include/am572x_1_1/pru_ctrl.h
        PRU_codes/include/am572x_1_1/pru_ecap.h
        PRU_codes/include/am572x_1_1/pru_iep.h
        PRU_codes/include/am572x_1_1/pru_intc.h
        PRU_codes/include/am572x_1_1/pru_uart.h
        PRU_codes/include/am572x_1_1/sys_mailbox.h
        PRU_codes/include/am572x_1_1/sys_pwmss.h
        PRU_codes/include/am572x_2_0/pru_cfg.h
        PRU_codes/include/am572x_2_0/pru_ctrl.h
        PRU_codes/include/am572x_2_0/pru_ecap.h
        PRU_codes/include/am572x_2_0/pru_iep.h
        PRU_codes/include/am572x_2_0/pru_intc.h
        PRU_codes/include/am572x_2_0/pru_uart.h
        PRU_codes/include/am572x_2_0/sys_mailbox.h
        PRU_codes/include/am572x_2_0/sys_mcspi.h
        PRU_codes/include/am572x_2_0/sys_pwmss.h
        PRU_codes/include/k2g/pru_cfg.h
        PRU_codes/include/k2g/pru_ctrl.h
        PRU_codes/include/k2g/pru_ecap.h
        PRU_codes/include/k2g/pru_iep.h
        PRU_codes/include/k2g/pru_intc.h
        PRU_codes/include/k2g/pru_uart.h
        PRU_codes/include/pru_rpmsg.h
        PRU_codes/include/pru_types.h
        PRU_codes/include/pru_virtio_ids.h
        PRU_codes/include/pru_virtio_ring.h
        PRU_codes/include/pru_virtqueue.h
        PRU_codes/include/rsc_types.h
        PRU_codes/include/types.h
        PRU_codes/lib/src/rpmsg_lib/pru_rpmsg.c
        PRU_codes/lib/src/rpmsg_lib/pru_virtqueue.c
        PRU_codes/PRU_Halt/main.c
        PRU_codes/PRU_Halt/resource_table_empty.h
        PRU_codes/PRU_IEP_reading/main.c
        PRU_codes/PRU_IEP_reading/resource_table_1.h
        PRU_codes/deploy_echo.sh
        deploy_echo_ARM.sh
        rpmsg_pru_user_space_echo.c)
